# amber-engine

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/Core/: Game.h
src/Rendering/: IRenderer.h
src/Utilities/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt
src/main/cpp/Amber/: CMakeLists.txt
src/main/cpp/Amber/Core/: CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  IComponent.h  ISystem.h  Node.cpp  Node.h  Round.cpp  Round.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h  World.cpp  World.h
src/main/cpp/Amber/IO/: AmberModelLoader.cpp  AmberModelLoader.h  AssetManager.cpp  CMakeLists.txt  ColladaModelLoader.cpp  ColladaModelLoader.h  IModelLoader.h  ITextureLoader.h  ImageTextureLoader.cpp  ImageTextureLoader.h  MeshBuilder.cpp  MeshBuilder.h  ShaderLoader.cpp  ShaderLoader.h
src/main/cpp/Amber/Math/: CMakeLists.txt  Utilities.h
src/main/cpp/Amber/Rendering/: BindLock.cpp  BindLock.h  CMakeLists.txt  Camera.cpp  Camera.h  ForwardDeclarations.h  IBindable.h  IBuffer.h  IContext.h  IMultiBindable.h  IObject.h  IProgram.h  IRenderTarget.cpp  IRenderTarget.h  IRenderable.h  IRenderer.h  IRenderingStrategy.cpp  IRenderingStrategy.h  ITexture.h  Layout.cpp  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Procedure.cpp  Procedure.h  Reference.h  Reference.txx  RenderStage.cpp  RenderStage.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  (+8 more)
src/main/cpp/Amber/Rendering/Backend/: BindLock.h  CMakeLists.txt  IBuffer.h  IContext.h  IMultiBindable.h  IObject.h  IProgram.cpp  IProgram.h  IRenderTarget.h  IRenderer.h  IShader.h  ITexture.h  Reference.h  Reference.txx  VertexTypes.cpp  VertexTypes.h
src/main/cpp/Amber/Rendering/Backend/OpenGL4/: CMakeLists.txt  OpenGL4Buffer.h  OpenGL4Context.cpp  OpenGL4Context.h  OpenGL4Framebuffer.cpp  OpenGL4Framebuffer.h  OpenGL4Includes.h  OpenGL4Object.cpp  OpenGL4Object.h  OpenGL4Program.h  OpenGL4Renderer.cpp  OpenGL4Renderer.h  OpenGL4Shader.h  OpenGL4Texture.h  OpenGL4VertexArray.cpp  OpenGL4VertexArray.h
src/main/cpp/Amber/Rendering/Backend/OpenGL4/GLSL/: BaseModel.fsh  BaseModel.vsh
src/main/cpp/Amber/Rendering/OpenGL4/: CMakeLists.txt  OpenGL4Buffer.cpp  OpenGL4Buffer.h  OpenGL4Context.cpp  OpenGL4Context.h  OpenGL4Framebuffer.h  OpenGL4Object.h  OpenGL4Program.cpp  OpenGL4Program.h  OpenGL4Renderer.cpp  OpenGL4Renderer.h  OpenGL4Shader.cpp  OpenGL4Shader.h  OpenGL4Texture.cpp  OpenGL4Texture.h  OpenGL4VertexArray.cpp  OpenGL4VertexArray.h
src/main/cpp/Amber/Utilities/: CMakeLists.txt  ClassTypeId.cpp  ClassTypeId.h  Config.h.in  Defines.h  Logger.h  ScopedDataPointer.h
src/main/cpp/Core/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  Round.cpp  Round.h
src/main/cpp/IO/: AmberModelLoader.cpp  AmberModelLoader.h  AssetManager.h  ColladaModelLoader.cpp  ColladaModelLoader.h  IModelLoader.h  ITextureLoader.cpp  ITextureLoader.h  ImageTextureLoader.cpp  ImageTextureLoader.h  MeshBuilder.cpp  MeshBuilder.h  ShaderLoader.cpp  ShaderLoader.h
src/main/cpp/Math/: Utilities.h
src/main/cpp/Physics/: CMakeLists.txt
src/main/cpp/Rendering/: BindLock.h  CMakeLists.txt  Camera.cpp  Camera.h  IBindable.h  IBuffer.h  IContext.cpp  IContext.h  IMultiBindable.cpp  IMultiBindable.h  IObject.h  IProgram.h  IRenderTarget.h  IRenderable.h  IRenderer.h  IShader.h  ITexture.h  Layout.cpp  Layout.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Procedure.cpp  Procedure.h  Reference.h  RenderStage.cpp  RenderStage.h  Scene.h  ShaderPass.cpp  ShaderPass.h  Skybox.cpp  Skybox.h  VertexTypes.cpp  VertexTypes.h  (+1 more)
src/main/cpp/Rendering/OpenGL4/: CMakeLists.txt  OpenGL4Buffer.cpp  OpenGL4Buffer.h  OpenGL4Context.cpp  OpenGL4Context.h  OpenGL4Framebuffer.cpp  OpenGL4Framebuffer.h  OpenGL4Program.cpp  OpenGL4Program.h  OpenGL4Renderer.cpp  OpenGL4Renderer.h  OpenGL4Shader.cpp  OpenGL4Shader.h  OpenGL4Texture.cpp  OpenGL4Texture.h  OpenGL4VertexArray.cpp  OpenGL4VertexArray.h
src/main/cpp/Rendering/OpenGL4/GLSL/: Skybox.fsh  Skybox.vsh
src/main/cpp/Rendering/OpenGLES2/: CMakeLists.txt
src/main/cpp/Utilities/: CMakeLists.txt  Defines.h  ScopedDataPointer.cpp
